Move fonts import to base

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2,6 +2,8 @@
 *  This file is imported in components/app-layout/AppLayout.scss
 */
 
+@import '~styles/fonts.css';
+
 /* stylelint-disable selector-max-type  */
 @-ms-viewport {
   width: device-width;
