--- a/styles/base.scss
+++ b/styles/base.scss
@@ -18,22 +18,22 @@
 }
 
 :root {
-  --scale-element: $scale;
-  --scale-font: $scale;
+  --scale-element: #{$scale};
+  --scale-font: #{$scale};
 
   @media (max-height: $scale-height-lg) {
-    --scale-element: $scale-element-lg;
-    --scale-font: $scale-font-lg;
+    --scale-element: #{$scale-element-lg};
+    --scale-font: #{$scale-font-lg};
   }
 
   @media (max-height: $scale-height-md) {
-    --scale-element: $scale-element-md;
-    --scale-font: $scale-font-md;
+    --scale-element: #{$scale-element-md};
+    --scale-font: #{$scale-font-md};
   }
 
   @media (max-height: $scale-height-sm) {
-    --scale-element: $scale-element-sm;
-    --scale-font: $scale-font-sm;
+    --scale-element: #{$scale-element-sm};
+    --scale-font: #{$scale-font-sm};
   }
 }
 
