--- a/components/button/Button.scss
+++ b/components/button/Button.scss
@@ -25,7 +25,7 @@ $btn-border-width: 2px;
   border: $btn-border-width solid transparent;
   border-radius: $btn-border-width;
 
-  background: $color-primary;
+  background: $color-pink;
 
   transition: 180ms;
   transition-property: border-color, background-color, color, opacity;
@@ -40,7 +40,7 @@ $btn-border-width: 2px;
   }
 
   &:hover {
-    background-color: darken($color-primary, 10%);
+    background-color: darken($color-pink, 10%);
   }
 
   &.disabled {
