--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -14,7 +14,7 @@
   @return $number;
 }
 
-@mixin responsive-font($min-size: $font-size-min, $size: $font-size, $limit: $page-limit) {
+@mixin responsive-font($min-size: $font-size-min, $size: $font-size, $limit: $page-limit, $scale-font-enable: false) {
   $unitless-min: strip-unit($min-size);
   $unitless-size: strip-unit($size);
   $baseline: strip-unit($min-mobile);
@@ -26,16 +26,37 @@
   }
 
   font-size: #{$unitless-min}px;
-  font-size: calc(#{$unitless-min}px * #{var(--scale-font)});
+
+  @if $scale-font-enable == true {
+    font-size: calc(#{$unitless-min}px * #{var(--scale-font)});
+  }
+
+  @else {
+    font-size: calc(#{$unitless-min}px);
+  }
 
   @media (min-width: $min-mobile) {
     font-size: #{$unitless-min}px;
-    font-size: calc((#{$font-multiplier} * #{100vw} + (#{$font-baseline}px)) * #{var(--scale-font)});
+
+    @if $scale-font-enable == true {
+      font-size: calc((#{$font-multiplier} * #{100vw} + (#{$font-baseline}px)) * #{var(--scale-font)});
+    }
+
+    @else {
+      font-size: calc((#{$font-multiplier} * #{100vw} + (#{$font-baseline}px)));
+    }
   }
 
   @media (min-width: $limit) {
     font-size: #{$unitless-size}px;
-    font-size: calc(#{$unitless-size}px * #{var(--scale-font)});
+
+    @if $scale-font-enable == true {
+      font-size: calc(#{$unitless-size}px * #{var(--scale-font)});
+    }
+
+    @else {
+      font-size: calc(#{$unitless-size}px);
+    }
   }
 }
 
