--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -71,7 +71,7 @@ $min-desktop: $min-1080;
 
 // Segment
 $segment-padding-mobile: $gutter * 3;
-$segment-padding: 200px; //percentage-based segments spacing
+$segment-padding: 200px;
 
 // vertically responsive breakpoints
 // might need to fine-tune these
