--- a/components/button/Button.scss
+++ b/components/button/Button.scss
@@ -40,7 +40,7 @@ $btn-border-width: 2px;
   }
 
   &:hover {
-    background-color: darken(#000, 10%);
+    background-color: lighten(#000, 25%);
   }
 
   &.disabled {
