Revert "Disable scale-font by default"
This reverts commit 3c55656908404d07d485fc4c27a738fd7e5fb743.

--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -14,7 +14,7 @@
   @return $number;
 }
 
-@mixin responsive-font($min-size: $font-size-min, $size: $font-size, $limit: $page-limit, $scale-font-enable: false) {
+@mixin responsive-font($min-size: $font-size-min, $size: $font-size, $limit: $page-limit) {
   $unitless-min: strip-unit($min-size);
   $unitless-size: strip-unit($size);
   $baseline: strip-unit($min-mobile);
@@ -26,37 +26,16 @@
   }
 
   font-size: #{$unitless-min}px;
-
-  @if $scale-font-enable == true {
-    font-size: calc(#{$unitless-min}px * #{var(--scale-font)});
-  }
-
-  @else {
-    font-size: calc(#{$unitless-min}px);
-  }
+  font-size: calc(#{$unitless-min}px * #{var(--scale-font)});
 
   @media (min-width: $min-mobile) {
     font-size: #{$unitless-min}px;
-
-    @if $scale-font-enable == true {
-      font-size: calc((#{$font-multiplier} * #{100vw} + (#{$font-baseline}px)) * #{var(--scale-font)});
-    }
-
-    @else {
-      font-size: calc((#{$font-multiplier} * #{100vw} + (#{$font-baseline}px)));
-    }
+    font-size: calc((#{$font-multiplier} * #{100vw} + (#{$font-baseline}px)) * #{var(--scale-font)});
   }
 
   @media (min-width: $limit) {
     font-size: #{$unitless-size}px;
-
-    @if $scale-font-enable == true {
-      font-size: calc(#{$unitless-size}px * #{var(--scale-font)});
-    }
-
-    @else {
-      font-size: calc(#{$unitless-size}px);
-    }
+    font-size: calc(#{$unitless-size}px * #{var(--scale-font)});
   }
 }
 
