--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,7 +1,3 @@
-/***
-*  This file is imported in components/app-layout/AppLayout.scss
-*/
-
 @import '~styles/fonts.css';
 
 /* stylelint-disable selector-max-type  */
@@ -47,8 +43,7 @@ body {
 html {
   -webkit-overflow-scrolling: touch;
   overflow-x: hidden;
-  // always show the vertical scrollbar so that content doesn't jump
-  overflow-y: scroll;
+  overflow-y: scroll; // always show the vertical scrollbar so that content doesn't jump
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -65,6 +60,7 @@ html {
 
 body {
   @include responsive-font($font-size-min, $font-size);
+
   position: relative;
 
   margin: 0;
