--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -15,6 +15,8 @@
 }
 
 @mixin responsive-font($min-size: $font-size-min, $size: $font-size, $limit: $page-limit) {
+  $scale-font-enable: global-variable-exists(scale);
+
   $unitless-min: strip-unit($min-size);
   $unitless-size: strip-unit($size);
   $baseline: strip-unit($min-mobile);
@@ -26,24 +28,39 @@
   }
 
   font-size: #{$unitless-min}px;
-  font-size: calc(#{$unitless-min}px * #{var(--scale-font)});
+
+  @if $scale-font-enable == true {
+    font-size: calc(#{$unitless-min}px * #{var(--scale-font)});
+  }
 
   @media (min-width: $min-mobile) {
     font-size: #{$unitless-min}px;
-    font-size: calc((#{$font-multiplier} * #{100vw} + (#{$font-baseline}px)) * #{var(--scale-font)});
+
+    @if $scale-font-enable == true {
+      font-size: calc((#{$font-multiplier} * #{100vw} + (#{$font-baseline}px)) * #{var(--scale-font)});
+    }
+
+    @else {
+      font-size: calc((#{$font-multiplier} * #{100vw} + (#{$font-baseline}px)));
+    }
   }
 
   @media (min-width: $limit) {
     font-size: #{$unitless-size}px;
-    font-size: calc(#{$unitless-size}px * #{var(--scale-font)});
+
+    @if $scale-font-enable == true {
+      font-size: calc(#{$unitless-size}px * #{var(--scale-font)});
+    }
   }
 }
 
 @mixin vertically-responsive($property, $number) {
   #{$property}: $number;
 
-  @supports (--css: variables) {
-    #{$property}: calc(#{$number} * var(--scale-element));
+  @if global-variable-exists(scale) {
+    @supports (--css: variables) {
+      #{$property}: calc(#{$number} * var(--scale-element));
+    }
   }
 }
 
@@ -82,7 +99,7 @@
   padding-left: $container-gutter-mobile;
   padding-right: $container-gutter-mobile;
 
-  max-width: $page-width + $container-gutter-mobile * 1;
+  max-width: $page-width + $container-gutter-mobile;
 
   @media (min-width: $min-mobile) {
     max-width: $page-width + $container-gutter-mobile * 2;
