Adding new design for default template

--- a/components/button/Button.scss
+++ b/components/button/Button.scss
@@ -22,7 +22,7 @@ $btn-border-width: 2px;
   text-align: center;
   text-decoration: none;
 
-  background: #000;
+  background-color: #000;
   color: #fff;
 
   transition: 180ms;
