--- a/components/devtools/GridOverlay.scss
+++ b/components/devtools/GridOverlay.scss
@@ -68,7 +68,7 @@
       width: 100%;
       height: 100%;
 
-      background: rgba(255, 255, 255, 0.1);
+      background-color: rgba(255, 255, 255, 0.1);
     }
 
     &::after {
@@ -76,7 +76,7 @@
       top: 0;
       left: 0;
 
-      background: rgba(0, 0, 0, 0.05);
+      background-color: rgba(0, 0, 0, 0.05);
     }
   }
 
