--- a/components/header/Header.scss
+++ b/components/header/Header.scss
@@ -3,10 +3,6 @@
 .header {
   display: block;
 
-  margin: 0 0 $gutter;
-
-  background-color: #fff;
-
   &__container {
     @include container;
   }
@@ -16,13 +12,18 @@
     align-items: center;
 
     padding: $gutter 0;
-
-    border-bottom: 1px solid #ccc;
   }
 
   &__logo {
     &Svg {
       display: block;
+
+      height: 16px;
+      width: auto;
+
+      @media (min-width: $min-768) {
+        height: 18px;
+      }
     }
   }
 
