--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -54,6 +54,11 @@
   }
 }
 
+// Alias for responsive-font mixin
+@mixin rf($args...) {
+  @include responsive-font($args...);
+}
+
 @mixin vertically-responsive($property, $number) {
   #{$property}: $number;
 
@@ -64,7 +69,7 @@
   }
 }
 
-// segment customisable per-component / instance rather than being forced to work around defaults.
+// Segment customisable per-component / instance rather than being forced to work around defaults.
 @mixin segment(
   $padding-top: $segment-padding,
   $padding-bottom: $segment-padding,
@@ -72,7 +77,7 @@
   $padding-bottom-mobile: $segment-padding-mobile) {
   flex-grow: 1;
 
-  // set up unitless values
+  // Set up unitless values
   $padding-top-mobile-unitless: strip-unit($padding-top-mobile);
   $padding-bottom-mobile-unitless: strip-unit($padding-bottom-mobile);
   $padding-top-unitless: strip-unit($padding-top);
@@ -118,15 +123,6 @@
   }
 }
 
-// change below to reflect your project
-@mixin heading() {
-  // per project
-}
-
-@mixin subheading() {
-  // per project
-}
-
 @mixin js-only {
   html:not(:global(.no-js)) & {
     @content;
@@ -147,7 +143,7 @@
   }
 }
 
-// gsap trans-in defaults
+// Gsap trans-in defaults
 @mixin will-animate($transform: true, $opacity: true) {
   @include js-only {
     @if $opacity == true {
