--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -13,6 +13,7 @@ $page-limit: $page-width + ($container-gutter-desktop * 2);
 
 // Fonts
 $font-family: 'Roboto', sans-serif;
+$font-heading: 'Open Sans', sans-serif;
 $font-size: 16px;
 $font-size-min: 13px;
 $line-height: 1.5;
